minio/minio/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  type: NodePort
  ports:
    - name: http-9000
      port: 9000
      targetPort: 9000
      nodePort: 19000
    - name: http-9001
      port: 9001
      targetPort: 9001
      nodePort: 19001
  selector:
    app: minio
