minio/minio/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-minio
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 300
    nginx.ingress.kubernetes.io/proxy-send-timeout: 60
    nginx.ingress.kubernetes.io/proxy-read-timeout: 300
    # 开启use-regex，启用path的正则匹配
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    # 定义域名
    - host: minio.your-domain.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
